[package]
name = "bootloader-run"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.1.25"
cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", rev = "e0a4653aa5634664a3f792b38715a572e9f89b44", features = [
    "extensive_hints",
] }
stone-prover-sdk = { git = "https://github.com/Moonsong-Labs/stone-prover-sdk", rev = "ed0499407dc0374c23eca373d88eb3465e15583b" }
madara-prover-rpc-server = { git = "https://github.com/Moonsong-Labs/madara-prover-api", rev = "5537a04c65800772167f233e99706ebe69178dc8" }
serde_json = "1.0.108"
